tests/fixtures/esm/errors/path_escape/outside.js
export const hiddenLabel = 'should not load';
